<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="event"
            type="com.semicolon.scientificresearch.EventListener.Events"/>
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.semicolon.scientificresearch.Activities.AenatActivity"
    android:fillViewport="true"
    android:fitsSystemWindows="true"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/ko7ly"
                app:contentInsetEnd="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/back"
                        android:clickable="true"
                        android:layout_width="56dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/back"
                        android:padding="12dp"
                        android:onClick="@{event::onClickListener}"
                        android:layout_alignParentLeft="true"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:text="@string/samples"
                        />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>



            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/yellow_aenat"
                android:textColor="@color/ko7ly"
                android:textStyle="bold"
                android:text="@string/morg_eq"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:onClick="@{event::onClickListener}"
                android:paddingRight="60dp"


                />




            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/belue_aenat"
                android:textColor="@color/ko7ly"
                android:textStyle="bold"
                android:text="@string/other"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:onClick="@{event::onClickListener}"
                android:paddingRight="60dp"

                />

    </LinearLayout>
</ScrollView>
</layout>
